// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownFinder bolds returns an array of bold text 1`] = `
Array [
  Object {
    "match": "**this is some bold**",
    "text": "this is some bold",
  },
  Object {
    "match": "**this**",
    "text": "this",
  },
]
`;

exports[`MarkdownFinder images returns an array of images 1`] = `
Array [
  Object {
    "match": "![img](example.com/image.png)",
    "text": "img",
    "url": "example.com/image.png",
  },
  Object {
    "match": "![img](example.com/photo.png)",
    "text": "img",
    "url": "example.com/photo.png",
  },
]
`;

exports[`MarkdownFinder italics returns an array of italic text 1`] = `
Array [
  Object {
    "match": "*this is some italic*",
    "text": "this is some italic",
  },
  Object {
    "match": "*this*",
    "text": "this",
  },
]
`;

exports[`MarkdownFinder links returns an array of links 1`] = `
Array [
  Object {
    "match": "[link](example.com)",
    "text": "link",
    "url": "example.com",
  },
  Object {
    "match": "[this](this.com)",
    "text": "this",
    "url": "this.com",
  },
]
`;
